add line breaks

--- a/awareness.html
+++ b/awareness.html
@@ -136,18 +136,18 @@
         </nav><br></header>
 <div class="col-md-12 mb-4">
     <div class="alert alert-info">
-        <p><strong><u>COMMUNITY AWARENESS</u></strong><br> United by our commitment to education and enlightenment, we present the Community Awareness project—a platform to raise consciousness, disseminate knowledge, and foster social progress within our community.</p>
-        <p>In Islam, seeking knowledge and sharing it are both virtuous acts. Through the Community Awareness project, we strive to provide valuable information on various topics, including health, education, social issues, and religious matters.</p>
-        <p>This initiative aims to empower individuals with awareness, enabling them to make informed decisions that positively impact their lives and the community at large. We organize seminars, workshops, and awareness campaigns to ensure that our community is well-informed and equipped to address challenges.</p>
-        <p>One of the foundations of Islam is seeking knowledge, as exemplified by the famous ayah:</p>
+        <p><strong><u>COMMUNITY AWARENESS</u></strong><br> United by our commitment to education and enlightenment, we present the Community Awareness project—a platform to raise consciousness, disseminate knowledge, and foster social progress within our community.</p><br>
+        <p>In Islam, seeking knowledge and sharing it are both virtuous acts. Through the Community Awareness project, we strive to provide valuable information on various topics, including health, education, social issues, and religious matters.</p><br>
+        <p>This initiative aims to empower individuals with awareness, enabling them to make informed decisions that positively impact their lives and the community at large. We organize seminars, workshops, and awareness campaigns to ensure that our community is well-informed and equipped to address challenges.</p><br>
+        <p>One of the foundations of Islam is seeking knowledge, as exemplified by the famous ayah:</p><br>
         <p class="arabic-text">
-            "وَقُل رَّبِّ زِدْنِي عِلْمًا"        </p>
+            "وَقُل رَّبِّ زِدْنِي عِلْمًا"        </p><br>
         <p class="translation-text">
             <em>"And say, 'My Lord, increase me in knowledge.'" (Quran 20:114)
             </em>
-        </p>
-        <p>This hadith underscores the significance of knowledge and its pursuit in Islam. By supporting the Community Awareness project, you are contributing to the fulfillment of this obligation and enabling your fellow community members to be well-informed individuals.</p>
-        <p><strong>Your support plays a crucial role in elevating our community's awareness and knowledge, enabling us to tackle challenges more effectively and fostering positive change.</strong></p>
+        </p><br>
+        <p>This hadith underscores the significance of knowledge and its pursuit in Islam. By supporting the Community Awareness project, you are contributing to the fulfillment of this obligation and enabling your fellow community members to be well-informed individuals.</p><br>
+        <p><strong>Your support plays a crucial role in elevating our community's awareness and knowledge, enabling us to tackle challenges more effectively and fostering positive change.</strong></p><br>
         <a href="https://api.whatsapp.com/send?phone=+256783919781&text=Hi%20KWEF%20Admin,%20I%20would%20like%20to%20donate.%20Insha%20Allah." class="btn btn-success btn-lg mt-3">
             SUPPORT NOW <i class="fas fa-hand-holding-usd"></i> 
         </a>
