--- a/children.html
+++ b/children.html
@@ -136,17 +136,17 @@
         </nav><br></header>
 <div class="col-md-12 mb-4">
     <div class="alert alert-info">
-        <p><strong><u>CHILD PROTECTION INITIATIVE</u></strong><br> Embracing the principles of compassion and safeguarding, we introduce the Child Protection Initiative—an essential endeavor aimed at ensuring the safety, well-being, and holistic development of our young ones.</p>
-        <p>In Islam, children are treasures entrusted to us by Allah. Through this initiative, we commit to creating a nurturing environment that shields them from harm, provides them with quality education, and nurtures their physical, emotional, and spiritual growth.</p>
-        <p>The Child Protection Initiative encompasses a range of activities, including educational workshops on child rights, awareness campaigns against child exploitation, and providing support to vulnerable children and their families.</p>
-        <p>This initiative is a reflection of the teachings of our beloved Prophet Muhammad (ﷺ) who emphasized the care and protection of children.</p>
+        <p><strong><u>CHILD PROTECTION INITIATIVE</u></strong><br> Embracing the principles of compassion and safeguarding, we introduce the Child Protection Initiative—an essential endeavor aimed at ensuring the safety, well-being, and holistic development of our young ones.</p><br>
+        <p>In Islam, children are treasures entrusted to us by Allah. Through this initiative, we commit to creating a nurturing environment that shields them from harm, provides them with quality education, and nurtures their physical, emotional, and spiritual growth.</p><br>
+        <p>The Child Protection Initiative encompasses a range of activities, including educational workshops on child rights, awareness campaigns against child exploitation, and providing support to vulnerable children and their families.</p><br>
+        <p>This initiative is a reflection of the teachings of our beloved Prophet Muhammad (ﷺ) who emphasized the care and protection of children.</p><br>
         <p class="arabic-text">
             "مَن لَّا يَرۡحَمۡنَا لَا يُرۡحَمۡ"
-        </p>
+        </p><br>
         <p class="translation-text">
             <em>"Whoever does not show mercy to our young ones and honor to our elders is not one of us." (Sunan Ibn Majah)</em>
-        </p>
-        <p><strong>Your support can make a significant difference in the lives of these children. By contributing to the Child Protection Initiative, you are helping us create a safe haven for our young ones to flourish, learn, and grow into responsible and empowered members of our community.</strong></p>
+        </p><br>
+        <p><strong>Your support can make a significant difference in the lives of these children. By contributing to the Child Protection Initiative, you are helping us create a safe haven for our young ones to flourish, learn, and grow into responsible and empowered members of our community.</strong></p><br>
         <a href="https://api.whatsapp.com/send?phone=+256783919781&text=Hi%20KWEF%20Admin,%20I%20would%20like%20to%20donate.%20Insha%20Allah." class="btn btn-success btn-lg mt-3">
             SUPPORT NOW <i class="fas fa-hand-holding-usd"></i> 
         </a>
