--- a/community.html
+++ b/community.html
@@ -136,18 +136,18 @@
         </nav><br></header>
 <div class="col-md-12 mb-4">
     <div class="alert alert-info">
-        <p><strong><u>COMMUNITY ECONOMIC EMPOWERMENT</u></strong><br> Guided by the spirit of self-reliance and collective progress, we introduce the Community Economic Empowerment project—an initiative designed to uplift our community by fostering economic growth, entrepreneurship, and financial stability.</p>
-        <p>In Islam, economic empowerment is not just a personal endeavor but a communal responsibility. Through this project, we aim to provide training, resources, and support to individuals and families to create sustainable livelihoods, start small businesses, and contribute to the prosperity of our community.</p>
-        <p>The Community Economic Empowerment project offers workshops on financial literacy, vocational training, and business development. By equipping our members with the necessary skills and knowledge, we are striving to build a thriving and self-sufficient community.</p>
-        <p>This initiative resonates with the teachings of our faith, as the Prophet Muhammad (ﷺ) emphasized the value of economic self-sufficiency and fair trade.</p>
+        <p><strong><u>COMMUNITY ECONOMIC EMPOWERMENT</u></strong><br> Guided by the spirit of self-reliance and collective progress, we introduce the Community Economic Empowerment project—an initiative designed to uplift our community by fostering economic growth, entrepreneurship, and financial stability.</p><br>
+        <p>In Islam, economic empowerment is not just a personal endeavor but a communal responsibility. Through this project, we aim to provide training, resources, and support to individuals and families to create sustainable livelihoods, start small businesses, and contribute to the prosperity of our community.</p><br>
+        <p>The Community Economic Empowerment project offers workshops on financial literacy, vocational training, and business development. By equipping our members with the necessary skills and knowledge, we are striving to build a thriving and self-sufficient community.</p><br>
+        <p>This initiative resonates with the teachings of our faith, as the Prophet Muhammad (ﷺ) emphasized the value of economic self-sufficiency and fair trade.</p><br>
         <p class="arabic-text">
             "يدٌ العليا خير من السفلى"
-        </p>
+        </p><br>
         <p class="translation-text">
             <em>"The upper hand is better than the lower hand." (Sahih Bukhari and Sahih Muslim)</em>
-        </p>
-        <p>This hadith serves as a reminder that helping and supporting others, especially in economic matters, is highly regarded in Islam. By contributing to the Community Economic Empowerment project, you are extending your upper hand to uplift and empower those in need, in alignment with the teachings of our beloved Prophet.</p>
-        <p><strong>Your support has the power to transform lives and uplift our community. By contributing to the Community Economic Empowerment project, you are not only helping individuals achieve financial independence but also contributing to the collective prosperity and growth of our community.</strong></p>
+        </p><br>
+        <p>This hadith serves as a reminder that helping and supporting others, especially in economic matters, is highly regarded in Islam. By contributing to the Community Economic Empowerment project, you are extending your upper hand to uplift and empower those in need, in alignment with the teachings of our beloved Prophet.</p><br>
+        <p><strong>Your support has the power to transform lives and uplift our community. By contributing to the Community Economic Empowerment project, you are not only helping individuals achieve financial independence but also contributing to the collective prosperity and growth of our community.</strong></p><br>
         <a href="https://api.whatsapp.com/send?phone=+256783919781&text=Hi%20KWEF%20Admin,%20I%20would%20like%20to%20donate.%20Insha%20Allah." class="btn btn-success btn-lg mt-3">
             SUPPORT NOW <i class="fas fa-hand-holding-usd"></i> 
         </a>
