--- a/construction.html
+++ b/construction.html
@@ -136,19 +136,19 @@
         </nav><br></header>
     <div class="col-md-12 mb-4">
         <div class="alert alert-info">
-            <p><strong><u>NEEDY HOUSE CONSTRUCTION</u></strong><br> Driven by the principles of compassion and solidarity, we embark on a mission to build houses for those in need—a mission that resonates with the teachings of Islam to care for our fellow human beings and uplift the less fortunate.</p>
-            <p>As the foundations are laid and the walls rise, we envision more than just structures. These houses are embodiments of hope, security, and warmth, providing shelter to families who have endured hardships. Each brick, each beam, is a testament to our commitment to the welfare of our community.</p>
-            <p>Through the act of building these homes, we alleviate the burden of homelessness, ensuring that families have a safe haven where they can rebuild their lives. This endeavor mirrors the noble example set by our Prophet Muhammad (ﷺ) who championed the cause of those in need.</p>
-            <p>However, achieving this goal requires collective effort and generosity. We extend a sincere invitation to you to be part of this noble journey. Your contribution is not just financial assistance; it is an investment in transforming lives, offering a chance for families to thrive.</p>
-            <p>Imagine the joy of a family moving into a home that your support helped create—a place of stability, comfort, and hope. Your kindness reverberates through time, becoming a lifeline for generations to come.</p>
-            <p>As we unite to construct these havens of dignity, let us reflect on the words of Allah in the Quran (4:36):</p>
+            <p><strong><u>NEEDY HOUSE CONSTRUCTION</u></strong><br> Driven by the principles of compassion and solidarity, we embark on a mission to build houses for those in need—a mission that resonates with the teachings of Islam to care for our fellow human beings and uplift the less fortunate.</p><br>
+            <p>As the foundations are laid and the walls rise, we envision more than just structures. These houses are embodiments of hope, security, and warmth, providing shelter to families who have endured hardships. Each brick, each beam, is a testament to our commitment to the welfare of our community.</p><br>
+            <p>Through the act of building these homes, we alleviate the burden of homelessness, ensuring that families have a safe haven where they can rebuild their lives. This endeavor mirrors the noble example set by our Prophet Muhammad (ﷺ) who championed the cause of those in need.</p><br>
+            <p>However, achieving this goal requires collective effort and generosity. We extend a sincere invitation to you to be part of this noble journey. Your contribution is not just financial assistance; it is an investment in transforming lives, offering a chance for families to thrive.</p><br>
+            <p>Imagine the joy of a family moving into a home that your support helped create—a place of stability, comfort, and hope. Your kindness reverberates through time, becoming a lifeline for generations to come.</p><br>
+            <p>As we unite to construct these havens of dignity, let us reflect on the words of Allah in the Quran (4:36):</p><br>
             <p class="arabic-text">
                 "وَٱعۡبُدُواْ ٱللَّهَ وَلَا تُشۡرِكُواْ بِهِۦ شَيۡ‍ٔٗاۖ وَبِٱلۡوَٰلِدَيۡنِ إِحۡسَـٰنٗا وَبِذِي ٱلۡقُرۡبَىٰ وَٱلۡيَتَـٰمَىٰ وَٱلۡمَسَـٰكِينِ وَٱلۡجَارِ ذِي ٱلۡقُرۡبَىٰ وَٱلۡجَارِ ٱلۡجُنُبِ وَٱلصَّاحِبِ بِٱلۡجَنۢبِ وَٱبۡنِ ٱلسَّبِيلِۖ وَمَا مَلَكَتۡ أَيۡمَـٰنُكُمۡۗ إِنَّ ٱللَّهَ لَا يُحِبُّ مَن كَانَ مُخۡتَالاً۬ فَخُورًا"
-            </p>
+            </p><br>
             <p class="translation-text">
                 "And worship Allah and associate nothing with Him, and to parents do good, and to relatives, orphans, the needy, the near neighbor, the neighbor farther away, the companion at your side..."
-            </p>
-            <p><strong>Your contribution holds transformative power. Join us in building not just houses, but sanctuaries of hope, security, and compassion.</strong></p>
+            </p><br>
+            <p><strong>Your contribution holds transformative power. Join us in building not just houses, but sanctuaries of hope, security, and compassion.</strong></p><br>
             <a href="https://api.whatsapp.com/send?phone=+256783919781&text=Hi%20KWEF%20Admin,%20I%20would%20like%20to%20donate.%20Insha%20Allah." class="btn btn-success btn-lg mt-3">
                 DONATE NOW <i class="fas fa-hand-holding-usd"></i> 
             </a>
