--- a/dhuhiya.html
+++ b/dhuhiya.html
@@ -136,17 +136,17 @@
         </nav><br></header>
 <div class="col-md-12 mb-4">
     <div class="alert alert-info">
-        <p><strong><u>DHUHIYA PROJECT</u></strong><br> Embracing the spirit of sacrifice and generosity, we introduce the Dhuhiya Project—a noble endeavor that aligns with the teachings of Islam and offers the opportunity to provide meat to those in need during Eid al-Adha.</p>
-        <p>In Islam, the act of offering a sacrificial animal during Eid al-Adha holds deep significance. The Dhuhiya Project enables you to partake in this virtuous act by donating for the sacrifice of animals. The meat from these sacrifices is distributed among the less fortunate members of our community, ensuring that they too can enjoy the blessings of Eid.</p>
-        <p>This initiative resonates with the words of Allah (ﷺ):</p>
+        <p><strong><u>DHUHIYA PROJECT</u></strong><br> Embracing the spirit of sacrifice and generosity, we introduce the Dhuhiya Project—a noble endeavor that aligns with the teachings of Islam and offers the opportunity to provide meat to those in need during Eid al-Adha.</p><br><br>
+        <p>In Islam, the act of offering a sacrificial animal during Eid al-Adha holds deep significance. The Dhuhiya Project enables you to partake in this virtuous act by donating for the sacrifice of animals. The meat from these sacrifices is distributed among the less fortunate members of our community, ensuring that they too can enjoy the blessings of Eid.</p><br>
+        <p>This initiative resonates with the words of Allah (ﷺ):</p><br>
         <p class="arabic-text">
             "فَكُلُوا۟ مِنۡهَا وَأَطۡعِمُوا۟ ٱلۡبَآئِسَ ٱلۡفَقِيرَ"
-        </p>
+        </p><br>
         <p class="translation-text">
             <em>"So eat of them and feed the needy and the beggar." (Quran 22:28)</em>
-        </p>
-        <p>Your contribution to the Dhuhiya Project not only reflects the spirit of sharing and sacrifice but also extends the joy of Eid to those who may not have the means to celebrate it fully.</p>
-        <p><strong>Join us in this act of benevolence, as we come together to ensure that the blessings of Eid are shared with all, spreading happiness and unity throughout our community.</strong></p>
+        </p><br>
+        <p>Your contribution to the Dhuhiya Project not only reflects the spirit of sharing and sacrifice but also extends the joy of Eid to those who may not have the means to celebrate it fully.</p><br>
+        <p><strong>Join us in this act of benevolence, as we come together to ensure that the blessings of Eid are shared with all, spreading happiness and unity throughout our community.</strong></p><br>
         <a href="https://api.whatsapp.com/send?phone=+256783919781&text=Hi%20KWEF%20Admin,%20I%20would%20like%20to%20support%20you!%20Insha%20Allah." class="btn btn-success btn-lg mt-3">
             SUPPORT NOW <i class="fas fa-hand-holding-usd"></i> 
         </a>
