--- a/environment.html
+++ b/environment.html
@@ -136,17 +136,17 @@
         </nav><br></header>
 <div class="col-md-12 mb-4">
     <div class="alert alert-info">
-        <p><strong><u>ENVIRONMENTAL PROTECTION</u></strong><br> Guided by the principles of stewardship and care for Allah's creation, we introduce the Environmental Protection initiative—a commitment to safeguarding the environment and preserving the natural blessings bestowed upon us.</p>
-        <p>In Islam, the Earth and its resources are considered trust from Allah, and it is our responsibility to protect and conserve them for future generations. The Environmental Protection project aims to raise awareness, promote sustainable practices, and address issues such as pollution and waste.</p>
-        <p>This initiative aligns with the teachings of the Quran:</p>
+        <p><strong><u>ENVIRONMENTAL PROTECTION</u></strong><br> Guided by the principles of stewardship and care for Allah's creation, we introduce the Environmental Protection initiative—a commitment to safeguarding the environment and preserving the natural blessings bestowed upon us.</p><br>
+        <p>In Islam, the Earth and its resources are considered trust from Allah, and it is our responsibility to protect and conserve them for future generations. The Environmental Protection project aims to raise awareness, promote sustainable practices, and address issues such as pollution and waste.</p><br>
+        <p>This initiative aligns with the teachings of the Quran:</p><br>
         <p class="arabic-text">
             "وَلَا تُفۡسِدُواْ فِى ٱلۡأَرۡضِ بَعۡدَ إِصۡلَـٰحِهَا وَٱدۡعُوهُ خَوۡفً۬ا وَطَمَعًاۖ إِنَّ رَحۡمَتَ ٱللَّهِ قَرِيبٌ۬ مِّنَ ٱلۡمُحۡسِنِينَ"
-        </p>
+        </p><br>
         <p class="translation-text">
             <em>"And do not cause corruption upon the earth after its reformation. And invoke Him in fear and aspiration. Indeed, the mercy of Allah is near to the doers of good." (Quran 7:56)</em>
-        </p>
-        <p>Your support for the Environmental Protection project is a step towards fulfilling our duty as responsible stewards and cultivating a sense of harmony between humanity and the environment.</p>
-        <p><strong>Join us in fostering a healthier, cleaner world that reflects the values of Islam and preserves the blessings of Allah's creation.</strong></p>
+        </p><br>
+        <p>Your support for the Environmental Protection project is a step towards fulfilling our duty as responsible stewards and cultivating a sense of harmony between humanity and the environment.</p><br>
+        <p><strong>Join us in fostering a healthier, cleaner world that reflects the values of Islam and preserves the blessings of Allah's creation.</strong></p><br>
         <a href="https://api.whatsapp.com/send?phone=+256783919781&text=Hi%20KWEF%20Admin,%20I%20would%20like%20to%20support%20you!%20Insha%20Allah." class="btn btn-success btn-lg mt-3">
             SUPPORT NOW <i class="fas fa-hand-holding-usd"></i> 
         </a>
