--- a/orphans.html
+++ b/orphans.html
@@ -137,20 +137,20 @@
 <body>
     <div class="col-md-12 mb-4">
         <div class="alert alert-info">
-            <p><strong><u>ORPHANAGE SUPPORT</u></strong><br> In the embrace of Allah's mercy, the Kibale Welfare and Education Foundation Limited extends its hands to uplift the lives of orphans and vulnerable children. Through the noble act of supporting their general welfare, education, and health sponsorship, we aim to become a means of hope and light in their lives.</p>
-            <p>With every step we take, we believe that we are walking the path of righteousness, guided by the teachings of Islam that emphasize compassion, kindness, and charity. Our mission resonates with the essence of giving, mirroring the boundless mercy of Allah that we, as His humble servants, strive to reflect on this Earth.</p>
-            <p>As we envision a brighter future for these young souls, we humbly invite those who hold the same values in their hearts to join us in this noble endeavor. By contributing to this cause, you are not merely donating; you are sowing the seeds of positivity, resilience, and opportunity in the lives of those who need it most.</p>
-            <p>Let us unite in this virtuous journey, knowing that the blessings of our actions will transcend time and space, reaching corners we may never know. With unwavering faith and the sincerity of intention, we ask for your support to make a lasting impact in the lives of these children.</p>
-            <p>May Allah's mercy and blessings be upon all those who extend their hands in generosity, for with each donation, we collectively become a source of solace, a beacon of hope, and a channel of Allah's love.</p>
-            <p>Together, let us create a legacy that shines eternally, and insha'Allah, the light we share will illuminate countless futures.</p>
-            <p><em>"Whoever relieves a believer's distress of the distressful aspects of this world, Allah will rescue him from a difficulty of the difficulties of the Hereafter..." (Sahih Muslim)</em></p>
+            <p><strong><u>ORPHANAGE SUPPORT</u></strong><br> In the embrace of Allah's mercy, the Kibale Welfare and Education Foundation Limited extends its hands to uplift the lives of orphans and vulnerable children. Through the noble act of supporting their general welfare, education, and health sponsorship, we aim to become a means of hope and light in their lives.</p><br>
+            <p>With every step we take, we believe that we are walking the path of righteousness, guided by the teachings of Islam that emphasize compassion, kindness, and charity. Our mission resonates with the essence of giving, mirroring the boundless mercy of Allah that we, as His humble servants, strive to reflect on this Earth.</p><br>
+            <p>As we envision a brighter future for these young souls, we humbly invite those who hold the same values in their hearts to join us in this noble endeavor. By contributing to this cause, you are not merely donating; you are sowing the seeds of positivity, resilience, and opportunity in the lives of those who need it most.</p><br>
+            <p>Let us unite in this virtuous journey, knowing that the blessings of our actions will transcend time and space, reaching corners we may never know. With unwavering faith and the sincerity of intention, we ask for your support to make a lasting impact in the lives of these children.</p><br>
+            <p>May Allah's mercy and blessings be upon all those who extend their hands in generosity, for with each donation, we collectively become a source of solace, a beacon of hope, and a channel of Allah's love.</p><br>
+            <p>Together, let us create a legacy that shines eternally, and insha'Allah, the light we share will illuminate countless futures.</p><br>
+            <p><em>"Whoever relieves a believer's distress of the distressful aspects of this world, Allah will rescue him from a difficulty of the difficulties of the Hereafter..." (Sahih Muslim)</em></p><br>
             <p class="arabic-text">
                 "مَنۡ نَفَّسَ عَن مُّؤۡمِنٍ۬ كُرۡبَةً۬ مِّن كُرَبِ ٱلدُّنۡيَا نَفَّسَ ٱللَّهُ عَنۡهُ كُرۡبَةً۬ مِّن كُرَبِ ٱلۡأَخِرَةِۚ وَمَن يَسَّرَ عَلَىٰ مُعۡسِرٍ۬ۢ يَسَّرَ ٱللَّهُ عَلَيۡهِ فِى ٱلدُّنۡيَا وَٱلۡأَخِرَةِۗ وَمَن سَتَرَ مُسۡلِمً۬ا سَتَرَهُ ٱللَّهُ فِى ٱلدُّنۡيَا وَٱلۡأَخِرَةِۗ وَٱللَّهُ فِى عَوۡنِ ٱلۡعَبۡدِ مَا كَانَ ٱلۡعَبۡدُ فِى عَوۡنِ أَخِيهِۗ وَمَن سَلَكَ طَرِيقً۬ا يَلۡتَمِسُ فِيهِ عِلۡمً۬ا سَهَّلَ ٱللَّهُ لَهُ ۥ بِهِۦ طَرِيقً۬ا إِلَى ٱلۡجَنَّةِ"
-            </p>
+            </p><br>
             <p class="translation-text">
                 <em>"Whoever relieves a believer's distress of the distressful aspects of this world, Allah will rescue him from a difficulty of the difficulties of the Hereafter. Whoever makes it easy for the one in difficulty, Allah will make it easy for him in this world and in the Hereafter. Whoever conceals the faults of a Muslim, Allah will conceal his faults in this world and in the Hereafter. Allah helps the servant as long as the servant helps his brother. Whoever treads a path in search of knowledge, Allah will make easy for him a path to Paradise."</em>
-            </p>
-            <p><strong>Donate today for the sake of Allah's pleasure and the eternal reward of contributing to a sacred legacy.</strong></p>
+            </p><br>
+            <p><strong>Donate today for the sake of Allah's pleasure and the eternal reward of contributing to a sacred legacy.</strong></p><br>
             <a href="https://api.whatsapp.com/send?phone=+256783919781&text=Hi%20KWEF%20Admin,%20I%20would%20like%20to%20support%20you!%20Insha%20Allah." class="btn btn-success btn-lg mt-3">
                DONATE NOW <i class="fas fa-hand-holding-usd"></i> 
             </a>        </div>
