--- a/ramadhan.html
+++ b/ramadhan.html
@@ -137,16 +137,16 @@
 <body>
     <div class="col-md-12 mb-4">
         <div class="alert alert-info">
-            <p><strong><u>RAMADAN IFTAR</u></strong><br> In the blessed month of Ramadan, a time of reflection and spiritual growth, we invite you to join us for a heartwarming Iftar gathering. This event serves as a reminder of the blessings of unity, community, and the opportunity to break fast together as a family of believers.</p>
-            <p>As the sun sets and the call to prayer fills the air, we come together to enjoy the first moments of nourishment after a day of fasting. This sacred tradition reminds us of the hardships endured by those who are less fortunate, inspiring us to share our blessings and extend our hands in charity.</p>
-            <p>Join us for an evening of spiritual enrichment and camaraderie as we break bread and share in the blessings of this holy month. Let us remember the words of Allah in the Quran (2:185):</p>
+            <p><strong><u>RAMADAN IFTAR</u></strong><br> In the blessed month of Ramadan, a time of reflection and spiritual growth, we invite you to join us for a heartwarming Iftar gathering. This event serves as a reminder of the blessings of unity, community, and the opportunity to break fast together as a family of believers.</p><br>
+            <p>As the sun sets and the call to prayer fills the air, we come together to enjoy the first moments of nourishment after a day of fasting. This sacred tradition reminds us of the hardships endured by those who are less fortunate, inspiring us to share our blessings and extend our hands in charity.</p><br>
+            <p>Join us for an evening of spiritual enrichment and camaraderie as we break bread and share in the blessings of this holy month. Let us remember the words of Allah in the Quran (2:185):</p><br>
             <p class="arabic-text">
                 "شَہۡرُ رَمَضَانَ ٱلَّذِىٓ أُنزِلَ فِيهِ ٱلۡقُرۡءَانُ هُدٗى لِّلنَّاسِ وَبَيِّنَـٰتٖ مِّنَ ٱلۡهُدَىٰ وَٱلۡفُرۡقَانِۚ فَمَن شَہِدَ مِنكُمُ ٱلشَّهۡرَ فَلۡيَصُمۡهُۖ وَمَن كَانَ مَرِيضًا أَوۡ عَلَىٰ سَفَرٖ فَعِدَّةٞ مِّنۡ أَيَّامٖ أُخَرَۗ يُرِيدُ ٱللَّهُ بِكُمُ ٱلۡيُسۡرَ وَلَا يُرِيدُ بِكُمُ ٱلۡعُسۡرَ وَلِتُكۡمِلُواْ ٱلۡعِدَّةَ وَلِتُكَبِّرُواْ ٱللَّهَ عَلَىٰ مَا هَدَىٰكُمۡ وَلَعَلَّكُمۡ تَشۡكُرُونَ"
-            </p>
+            </p><br>
             <p class="translation-text">
                 <em>"The month of Ramadan [is that] in which was revealed the Quran, a guidance for the people and clear proofs of guidance and criterion. So whoever sights [the new moon of] the month, let him fast it; and whoever is ill or on a journey - then an equal number of other days. Allah intends for you ease and does not intend for you hardship and [wants] for you to complete the period and to glorify Allah for that [to] which He has guided you, and perhaps you will be grateful."</em>
-            </p>
-            <p><strong>Your presence and participation are a means of blessing and unity. Join us as we celebrate the spirit of Ramadan and share in the joy of breaking fast together.</strong></p>
+            </p><br>
+            <p><strong>Your presence and participation are a means of blessing and unity. Join us as we celebrate the spirit of Ramadan and share in the joy of breaking fast together.</strong></p><br>
             <a href="https://api.whatsapp.com/send?phone=+256783919781&text=Hi%20KWEF%20Admin,%20I%20would%20like%20to%20register%20now!%20Insha%20Allah." class="btn btn-success btn-lg mt-3">
                 REGISTER NOW <i class="fas fa-user-plus"></i>
             </a>
