--- a/school.html
+++ b/school.html
@@ -137,19 +137,19 @@
 <body>
     <div class="col-md-12 mb-4">
         <div class="alert alert-info">
-            <p><strong><u>SCHOOL CONSTRUCTION</u></strong><br> Guided by the light of knowledge, we embark on a journey to construct a school that will serve as a sanctuary of learning and growth for the generations to come. In Islam, education is a sacred pursuit, a means to gain understanding of Allah's creation and to fulfill our roles as stewards of this world.</p>
-            <p>As we lay the foundation and raise the walls of this educational institution, we envision a space where young minds will be nurtured, where curiosity will be kindled, and where the seeds of wisdom will be sown. A school is not just a building; it is a beacon of hope, a gateway to opportunities, and a vessel that carries the torch of knowledge.</p>
-            <p>Through the power of education, we empower individuals to rise above challenges, to become leaders and scholars, and to contribute positively to society. The construction of this school is a testament to our commitment to fostering an environment where students can blossom into enlightened and responsible members of the ummah.</p>
-            <p>However, the journey to build this institution is one that requires collective effort and generosity. We extend a heartfelt invitation to you to be a part of this noble endeavor. Your contribution is more than just a financial donation; it is an investment in the future of the ummah and a means to earn everlasting rewards.</p>
-            <p>Imagine the reward of every lesson taught, every idea nurtured, and every dream fulfilled within the walls you helped establish. Your support will echo through time, shaping the destiny of countless young minds and paving the way for generations of learners.</p>
-            <p>As we join hands to construct this hub of education, let us recall the words of the Prophet Muhammad (ﷺ): <em>"Seeking knowledge is obligatory upon every Muslim."</em> (Bukhari)</p>
+            <p><strong><u>SCHOOL CONSTRUCTION</u></strong><br> Guided by the light of knowledge, we embark on a journey to construct a school that will serve as a sanctuary of learning and growth for the generations to come. In Islam, education is a sacred pursuit, a means to gain understanding of Allah's creation and to fulfill our roles as stewards of this world.</p><br>
+            <p>As we lay the foundation and raise the walls of this educational institution, we envision a space where young minds will be nurtured, where curiosity will be kindled, and where the seeds of wisdom will be sown. A school is not just a building; it is a beacon of hope, a gateway to opportunities, and a vessel that carries the torch of knowledge.</p><br>
+            <p>Through the power of education, we empower individuals to rise above challenges, to become leaders and scholars, and to contribute positively to society. The construction of this school is a testament to our commitment to fostering an environment where students can blossom into enlightened and responsible members of the ummah.</p><br>
+            <p>However, the journey to build this institution is one that requires collective effort and generosity. We extend a heartfelt invitation to you to be a part of this noble endeavor. Your contribution is more than just a financial donation; it is an investment in the future of the ummah and a means to earn everlasting rewards.</p><br>
+            <p>Imagine the reward of every lesson taught, every idea nurtured, and every dream fulfilled within the walls you helped establish. Your support will echo through time, shaping the destiny of countless young minds and paving the way for generations of learners.</p><br>
+            <p>As we join hands to construct this hub of education, let us recall the words of the Prophet Muhammad (ﷺ): <em>"Seeking knowledge is obligatory upon every Muslim."</em> (Bukhari)</p><br>
             <p class="arabic-text">
                 "طَلَبُ ٱلۡعِلۡمِ فَرِيضَةٞ عَلَىٰ كُلِّ مُسۡلِمٖ وَمُسۡلِمَةٖ"
-            </p>
+            </p><br>
             <p class="translation-text">
              <em> "Seeking knowledge is obligatory upon every Muslim man and Muslim woman."</em>  
-            </p>
-            <p><strong>Your contribution matters. Partner with us in building not just a school, but a gateway to enlightenment, progress, and the fulfillment of dreams.</strong></p>
+            </p><br>
+            <p><strong>Your contribution matters. Partner with us in building not just a school, but a gateway to enlightenment, progress, and the fulfillment of dreams.</strong></p><br>
             <a href="https://api.whatsapp.com/send?phone=+256783919781&text=Hi%20KWEF%20Admin,%20I%20would%20like%20to%20support%20you!%20Insha%20Allah." class="btn btn-success btn-lg mt-3">
                 DONATE NOW <i class="fas fa-hand-holding-usd"></i> 
             </a>
