--- a/skill.html
+++ b/skill.html
@@ -137,17 +137,17 @@
 </head>
 <div class="col-md-12 mb-4">
     <div class="alert alert-info">
-        <p><strong><u>SKILL EMPOWERMENT PROGRAM</u></strong><br> Guided by the principles of self-improvement and community upliftment, we are launching a Skill Empowerment Program—a transformative initiative designed to equip individuals with essential skills that will enhance their livelihoods and contribute to the growth of our community.</p>
-        <p>In Islam, seeking knowledge and acquiring skills are highly valued. Through this program, we aim to provide access to vocational training and education that will empower participants to become self-reliant and economically active members of society.</p>
-        <p>The Skill Empowerment Program will cover a wide range of practical skills, including but not limited to craftsmanship, digital literacy, entrepreneurship, and healthcare. By nurturing talent and knowledge, we believe in fostering an environment where individuals can thrive and contribute positively to their families and the wider community.</p>
-        <p>This initiative holds a special place in our hearts, as it reflects the teachings of the Prophet Muhammad (ﷺ) who emphasized the importance of acquiring beneficial skills.</p>
+        <p><strong><u>SKILL EMPOWERMENT PROGRAM</u></strong><br> Guided by the principles of self-improvement and community upliftment, we are launching a Skill Empowerment Program—a transformative initiative designed to equip individuals with essential skills that will enhance their livelihoods and contribute to the growth of our community.</p><br>
+        <p>In Islam, seeking knowledge and acquiring skills are highly valued. Through this program, we aim to provide access to vocational training and education that will empower participants to become self-reliant and economically active members of society.</p><br>
+        <p>The Skill Empowerment Program will cover a wide range of practical skills, including but not limited to craftsmanship, digital literacy, entrepreneurship, and healthcare. By nurturing talent and knowledge, we believe in fostering an environment where individuals can thrive and contribute positively to their families and the wider community.</p><br>
+        <p>This initiative holds a special place in our hearts, as it reflects the teachings of the Prophet Muhammad (ﷺ) who emphasized the importance of acquiring beneficial skills.</p><br>
         <p class="arabic-text">
             "مَنْ سَلَكَ طَرِيقًا يَلْتَمِسُ فِيهِ عِلْمًا سَهَّلَ اللَّهُ لَهُ طَرِيقًا إِلَى الْجَنَّةِ"
-        </p>
+        </p><br>
         <p class="translation-text">
             <em>"Whoever treads a path in search of knowledge, Allah makes his path to Paradise easy." (Sahih Muslim)</em>
-        </p>
-        <p><strong>We invite you to be part of this journey of empowerment. Your presence will be highly appreciated!</strong></p>
+        </p><br>
+        <p><strong>We invite you to be part of this journey of empowerment. Your presence will be highly appreciated!</strong></p><br>
         <a href="https://api.whatsapp.com/send?phone=+256783919781&text=Hi%20KWEF%20Admin,%20I%20would%20like%20to%20join%20now!%20Insha%20Allah." class="btn btn-success btn-lg mt-3">
             JOIN NOW <i class="fas fa-user"></i>
         </a>
