--- a/umrah.html
+++ b/umrah.html
@@ -136,17 +136,17 @@
         </nav><br></header>
 <div class="col-md-12 mb-4">
     <div class="alert alert-info">
-        <p><strong><u>HIJJAH AND UMRAH SPONSORSHIP</u></strong><br> United by the spirit of pilgrimage and devotion, we invite you to participate in our Hijjah and Umrah Sponsorship initiative. This noble endeavor offers you the opportunity to support fellow Muslims in fulfilling their sacred duty of performing Hijjah and Umrah, allowing them to draw closer to Allah and seek forgiveness.</p>
-        <p>The act of sponsoring someone's Hijjah or Umrah journey is a means of immense reward. By enabling others to embark on this spiritual pilgrimage, you partake in their blessings and the gratitude of those who benefit from your generosity.</p>
-        <p>Throughout Islamic history, the significance of Hijjah and Umrah has been profound, holding a special place in the hearts of believers. As you contribute to this sponsorship, you play a vital role in facilitating a journey of faith and spiritual rejuvenation.</p>
-        <p>Our beloved Prophet Muhammad (ﷺ) said:</p>
+        <p><strong><u>HIJJAH AND UMRAH SPONSORSHIP</u></strong><br> United by the spirit of pilgrimage and devotion, we invite you to participate in our Hijjah and Umrah Sponsorship initiative. This noble endeavor offers you the opportunity to support fellow Muslims in fulfilling their sacred duty of performing Hijjah and Umrah, allowing them to draw closer to Allah and seek forgiveness.</p><br>
+        <p>The act of sponsoring someone's Hijjah or Umrah journey is a means of immense reward. By enabling others to embark on this spiritual pilgrimage, you partake in their blessings and the gratitude of those who benefit from your generosity.</p><br>
+        <p>Throughout Islamic history, the significance of Hijjah and Umrah has been profound, holding a special place in the hearts of believers. As you contribute to this sponsorship, you play a vital role in facilitating a journey of faith and spiritual rejuvenation.</p><br>
+        <p>Our beloved Prophet Muhammad (ﷺ) said:</p><br>
         <p class="arabic-text">
             "مَنْ حَجَّ فَلَمْ يَرْفُثْ وَلَمْ يَفْسُقْ، رَجَعَ كَيَوْمِ وَلَدَتْهُ أُمُّهُ"
-        </p>
+        </p><br>
         <p class="translation-text">
-            "Whoever performs the Hajj and does not indulge in obscenity or transgression will return free from sin as on the day his mother gave birth to him." (Bukhari, Muslim)</p>
-        <p>Your contribution to the Hijjah and Umrah Sponsorship initiative not only assists in the fulfillment of an individual's spiritual journey but also nurtures a connection to the blessed land of Makkah and Madinah.</p>
-        <p><strong>Join hands with us in this virtuous endeavor and be a source of blessing for fellow believers on their sacred pilgrimage.</strong></p>
+            "Whoever performs the Hajj and does not indulge in obscenity or transgression will return free from sin as on the day his mother gave birth to him." (Bukhari, Muslim)</p><br>
+        <p>Your contribution to the Hijjah and Umrah Sponsorship initiative not only assists in the fulfillment of an individual's spiritual journey but also nurtures a connection to the blessed land of Makkah and Madinah.</p><br>
+        <p><strong>Join hands with us in this virtuous endeavor and be a source of blessing for fellow believers on their sacred pilgrimage.</strong></p><br>
         <a href="https://api.whatsapp.com/send?phone=+256783919781&text=Hi%20KWEF%20Admin,%20I%20would%20like%20to%20donate.%20Insha%20Allah." class="btn btn-success btn-lg mt-3">
             DONATE NOW <i class="fas fa-hand-holding-usd"></i> 
         </a>
