--- a/vegetables.html
+++ b/vegetables.html
@@ -136,17 +136,17 @@
         </nav><br></header>
 <div class="col-md-12 mb-4">
     <div class="alert alert-info">
-        <p><strong><u>VEGETABLES PROJECT</u></strong><br> Nourishment is a fundamental right of every individual, and through our Vegetables Project, we strive to ensure the availability of fresh, nutritious produce to our community. The project is a testament to the principles of self-reliance and sustainability upheld by Islam.</p>
-        <p>By cultivating a variety of vegetables, we not only promote healthy eating but also empower ourselves to be stewards of the earth, as taught by our faith. These homegrown blessings will be distributed to those in need, fostering a sense of unity and care within our community.</p>
-        <p>Just as the Quran teaches us:</p>
+        <p><strong><u>VEGETABLES PROJECT</u></strong><br> Nourishment is a fundamental right of every individual, and through our Vegetables Project, we strive to ensure the availability of fresh, nutritious produce to our community. The project is a testament to the principles of self-reliance and sustainability upheld by Islam.</p><br>
+        <p>By cultivating a variety of vegetables, we not only promote healthy eating but also empower ourselves to be stewards of the earth, as taught by our faith. These homegrown blessings will be distributed to those in need, fostering a sense of unity and care within our community.</p><br>
+        <p>Just as the Quran teaches us:</p><br>
         <p class="arabic-text">
             "وَأۡنفِقُواْ مِمَّا رَزَقۡنَـٰكُم مِّن قَبۡلِ أَن يَأۡتِىَ أَحَدَكُمُ ٱلۡمَوۡتُ فَيَقُولَ رَبِّ لَوۡلَآ أَخَّرۡتَنِىٓ إِلَىٰٓ أَجَلٍ۬ قَرِيبٍ۬ فَأَصَّدَّقَ وَأَكُن مِّنَ ٱلصَّـٰلِحِينَ"
-        </p>
+        </p><br>
         <p class="translation-text">
             <em>"And spend [in the way of Allah] from what We have provided you before death approaches one of you and he says, 'My Lord, if only You would delay me for a brief term so I would give charity and be among the righteous.'" (Quran 63:10)</em>
-        </p>
-        <p>Your support in the Vegetables Project is an investment in the health and well-being of our community members, while also embodying the spirit of giving and compassion encouraged by Islam.</p>
-        <p><strong>Join hands with us in nurturing not only the earth but also the hearts of those in need through this initiative.</strong></p>
+        </p><br>
+        <p>Your support in the Vegetables Project is an investment in the health and well-being of our community members, while also embodying the spirit of giving and compassion encouraged by Islam.</p><br>
+        <p><strong>Join hands with us in nurturing not only the earth but also the hearts of those in need through this initiative.</strong></p><br>
         <a href="https://api.whatsapp.com/send?phone=+256783919781&text=Hi%20KWEF%20Admin,%20I%20would%20like%20to%20support%20you!%20Insha%20Allah." class="btn btn-success btn-lg mt-3">
             SUPPORT NOW <i class="fas fa-hand-holding-usd"></i> 
         </a>
