--- a/well.html
+++ b/well.html
@@ -136,19 +136,19 @@
         </nav><br>
 <div class="col-md-12 mb-4">
     <div class="alert alert-info">
-        <p><strong><u>BOREHOLE DRILLING & CONSTRUCTION</u></strong><br> With a deep commitment to providing access to clean and safe water, we have embarked on a mission to drill and construct a borehole—a source of life-giving water that will quench the thirst of those in need. In Islam, providing water to others is a noble act, one that holds immense rewards both in this world and the hereafter.</p>
-        <p>The drilling and construction of a borehole is not just a project; it's a lifeline for communities that lack access to clean water sources. By ensuring a reliable supply of fresh water, we alleviate the burden of waterborne diseases, reduce the distance people have to travel for water, and offer a means for growth and prosperity.</p>
-        <p>This project is a testament to our dedication to the principles of compassion and solidarity taught by Islam. The borehole will not only serve the immediate needs of the community but also empower them to lead healthier lives and thrive in various aspects of life.</p>
-        <p>Currently, the project is in progress, and we have taken the initial steps to provide clean water. However, to complete this project and ensure its sustainability, we seek the generous support of our Islamic community.</p>
-        <p>We invite you to join us in this noble endeavor by contributing to the drilling and construction of the borehole. Your financial support will play a crucial role in completing this life-changing project, providing clean water to those who need it most.</p>
-        <p>As we work towards this cause, let us remember the words of the Prophet Muhammad (ﷺ):</p>
+        <p><strong><u>BOREHOLE DRILLING & CONSTRUCTION</u></strong><br> With a deep commitment to providing access to clean and safe water, we have embarked on a mission to drill and construct a borehole—a source of life-giving water that will quench the thirst of those in need. In Islam, providing water to others is a noble act, one that holds immense rewards both in this world and the hereafter.</p><br>
+        <p>The drilling and construction of a borehole is not just a project; it's a lifeline for communities that lack access to clean water sources. By ensuring a reliable supply of fresh water, we alleviate the burden of waterborne diseases, reduce the distance people have to travel for water, and offer a means for growth and prosperity.</p><br>
+        <p>This project is a testament to our dedication to the principles of compassion and solidarity taught by Islam. The borehole will not only serve the immediate needs of the community but also empower them to lead healthier lives and thrive in various aspects of life.</p><br>
+        <p>Currently, the project is in progress, and we have taken the initial steps to provide clean water. However, to complete this project and ensure its sustainability, we seek the generous support of our Islamic community.</p><br>
+        <p>We invite you to join us in this noble endeavor by contributing to the drilling and construction of the borehole. Your financial support will play a crucial role in completing this life-changing project, providing clean water to those who need it most.</p><br>
+        <p>As we work towards this cause, let us remember the words of the Prophet Muhammad (ﷺ):</p><br>
         <p class="arabic-text">
             "مَنۡ حَفِرَ بِئَاتِ مَآءٖ أَوۡ رَهِيَمَهَآ إِلَّا كَانَتۡ لَهُۥ صَدَقَةٗ"
-        </p>
+        </p><br>
         <p class="translation-text">
             <em>"Whoever digs a well for the sake of Allah, or constructs a pipeline, or plants a date-palm tree, will be rewarded for every drop of water or fruit that is produced." (Al-Bukhari and Muslim)</em>
-        </p>
-        <p><strong>Your support will contribute to the transformation of lives by providing a precious resource. Stand with us in bringing the gift of clean water to those who deserve it.</strong></p>
+        </p><br>
+        <p><strong>Your support will contribute to the transformation of lives by providing a precious resource. Stand with us in bringing the gift of clean water to those who deserve it.</strong></p><br>
         <a href="https://api.whatsapp.com/send?phone=+256783919781&text=Hi%20KWEF%20Admin,%20I%20would%20like%20to%20support%20you!%20Insha%20Allah." class="btn btn-success btn-lg mt-3">
             DONATE NOW <i class="fas fa-hand-holding-usd"></i> 
         </a>
