--- a/widow.html
+++ b/widow.html
@@ -136,19 +136,19 @@
         </nav><br></header>
 <div class="col-md-12 mb-4">
     <div class="alert alert-info">
-        <p><strong><u>BUILD A HOME FOR A WIDOW</u></strong><br> With hearts brimming with compassion and the spirit of community, we embark on a mission to provide shelter and solace to widows in need. Guided by the teachings of Islam, we understand the importance of supporting those who have lost their partners, ensuring they have a safe and dignified space to call home.</p>
-        <p>The Build a Home for a Widow project reflects the essence of empathy enshrined in our faith. By constructing homes for widows, we not only offer them a place of security but also uphold their honor, showing them that they are valued members of our community.</p>
-        <p>This endeavor entails meticulous planning, from selecting appropriate locations to designing comfortable living spaces. We need your generous support to procure building materials, cover construction costs, and ensure the homes are equipped with essentials for a decent life.</p>
-        <p>We reach out to you, the compassionate members of our Islamic community, to join hands in this noble cause. Your contributions will directly impact the lives of widows, providing them with a haven of stability and respect.</p>
-        <p>Your support carries profound significance—it embodies the teachings of kindness and consideration advocated by our beloved Prophet Muhammad (ﷺ).</p>
+        <p><strong><u>BUILD A HOME FOR A WIDOW</u></strong><br> With hearts brimming with compassion and the spirit of community, we embark on a mission to provide shelter and solace to widows in need. Guided by the teachings of Islam, we understand the importance of supporting those who have lost their partners, ensuring they have a safe and dignified space to call home.</p><br>
+        <p>The Build a Home for a Widow project reflects the essence of empathy enshrined in our faith. By constructing homes for widows, we not only offer them a place of security but also uphold their honor, showing them that they are valued members of our community.</p><br>
+        <p>This endeavor entails meticulous planning, from selecting appropriate locations to designing comfortable living spaces. We need your generous support to procure building materials, cover construction costs, and ensure the homes are equipped with essentials for a decent life.</p><br>
+        <p>We reach out to you, the compassionate members of our Islamic community, to join hands in this noble cause. Your contributions will directly impact the lives of widows, providing them with a haven of stability and respect.</p><br>
+        <p>Your support carries profound significance—it embodies the teachings of kindness and consideration advocated by our beloved Prophet Muhammad (ﷺ).</p><br>
         <p class="arabic-text">
             "وَيُطۡعِمُونَ ٱلطَّعَامَ عَلَىٰ حُبِّهِۦ مِسۡكِينٗا وَيَتِيمٗا وَأَسِيرٗا"
-        </p>
+        </p><br>
         <p class="translation-text">
            <em> "And they give food in spite of love for it to the needy, the orphan, and the captive." (Quran 76:8)</em>
-        </p>
+        </p><br>
         
-        <p><strong>Join us in this meaningful endeavor to make a lasting impact and provide widows with not just a home, but a sanctuary of comfort and support.</strong></p>
+        <p><strong>Join us in this meaningful endeavor to make a lasting impact and provide widows with not just a home, but a sanctuary of comfort and support.</strong></p><br>
         <a href="https://api.whatsapp.com/send?phone=+256783919781&text=Hi%20KWEF%20Admin,%20I%20would%20like%20to%20support%20you!%20Insha%20Allah." class="btn btn-success btn-lg mt-3">
             SUPPORT NOW <i class="fas fa-hand-holding-usd"></i> 
         </a>
