--- a/adhuhah.html
+++ b/adhuhah.html
@@ -137,18 +137,18 @@
     </header>
     <div class="col-md-12 mb-4">
         <div class="alert alert-info">
-            <p><strong><u>QURBANI/ADHUHA SACRIFICE</u></strong><br> Embracing the spirit of devotion and selflessness, we approach the blessed occasion of Qurbani/Adhuhah—a time of sharing, sacrifice, and compassion. As we fulfill this sacred duty, we honor the tradition of Prophet Ibrahim (peace be upon him), who demonstrated unwavering obedience and submission to Allah.</p>
-            <p>With each sacrificial offering, we share the bounty that Allah has bestowed upon us with those less fortunate. We remember the importance of generosity and solidarity, recognizing that this act is not just about the meat but about the intention and the heart behind it.</p>
-            <p>As the animals are sacrificed, we reflect on the significance of giving, the essence of sharing, and the humility of service. This act of worship symbolizes our willingness to give of ourselves for the sake of Allah and to care for those who are in need.</p>
-            <p>Through Qurbani/Adhuhah, we connect with the universal message of Islam—to uplift the community, provide for the destitute, and stand in unity as one Ummah. Our contributions make a difference, providing nourishment, hope, and relief to those who are often overlooked.</p>
-            <p>As we engage in this act of worship, let us remember the words of Allah in the Quran (22:37):</p>
+            <p><strong><u>QURBANI/ADHUHA SACRIFICE</u></strong><br> Embracing the spirit of devotion and selflessness, we approach the blessed occasion of Qurbani/Adhuhah—a time of sharing, sacrifice, and compassion. As we fulfill this sacred duty, we honor the tradition of Prophet Ibrahim (peace be upon him), who demonstrated unwavering obedience and submission to Allah.</p><br>
+            <p>With each sacrificial offering, we share the bounty that Allah has bestowed upon us with those less fortunate. We remember the importance of generosity and solidarity, recognizing that this act is not just about the meat but about the intention and the heart behind it.</p><br>
+            <p>As the animals are sacrificed, we reflect on the significance of giving, the essence of sharing, and the humility of service. This act of worship symbolizes our willingness to give of ourselves for the sake of Allah and to care for those who are in need.</p><br>
+            <p>Through Qurbani/Adhuhah, we connect with the universal message of Islam—to uplift the community, provide for the destitute, and stand in unity as one Ummah. Our contributions make a difference, providing nourishment, hope, and relief to those who are often overlooked.</p><br>
+            <p>As we engage in this act of worship, let us remember the words of Allah in the Quran (22:37):</p><br>
             <p class="arabic-text">
                 "لَن يَنَالَ ٱللَّهَ لُحُومُهَا وَلَا دِمَآؤُهَا وَلَٰكِن يَنَالُهُ ٱلتَّقۡوَىٰ مِنكُمۡۚ كَذَٰلِكَ سَخَّرَهَا لَكُمۡ لِتُكَبِّرُواْ ٱللَّهَ عَلَىٰ مَا هَدَىٰكُمۡۗ وَبَشِّرِ ٱلۡمُحۡسِنِينَ"
-            </p>
+            </p><br>
             <p class="translation-text">
                 <em>"Their meat will not reach Allah, nor will their blood, but what reaches Him is piety from you. Thus have We subjected them to you that you may glorify Allah for that [to] which He has guided you; and give good tidings to the doers of good."</em>
-            </p>
-            <p><strong>Your participation matters. Join us in upholding the legacy of sacrifice, generosity, and love for the sake of Allah's pleasure.</strong></p>
+            </p><br>
+            <p><strong>Your participation matters. Join us in upholding the legacy of sacrifice, generosity, and love for the sake of Allah's pleasure.</strong></p><br>
             <a href="https://api.whatsapp.com/send?phone=+256783919781&text=Hi%20KWEF%20Admin,%20I%20would%20like%20to%20support%20you!%20Insha%20Allah." class="btn btn-success btn-lg mt-3">
                 DONATE NOW <i class="fas fa-hand-holding-usd"></i> 
             </a>
