--- a/livestock.html
+++ b/livestock.html
@@ -136,20 +136,20 @@
         </nav><br></header>
 <div class="col-md-12 mb-4">
     <div class="alert alert-info">
-        <p><strong><u>LIVESTOCK PROJECT</u></strong><br> With the intention of sustainable support and self-sufficiency, we present to you our Livestock Project—an initiative aimed at generating income to sustain our noble project activities. In the spirit of Islamic principles, we strive to empower ourselves and our community through the means that Allah has provided.</p>
-        <p>The Livestock Project is a testament to the principle of self-reliance endorsed by our faith. By rearing animals such as goats, sheep, and cows, we not only provide a source of sustenance for ourselves but also a means to fund our projects that serve the welfare and betterment of the community.</p>
-        <p>The project involves careful management, from purchasing the livestock to ensuring proper feeding, veterinary care, and housing. This endeavor requires continuous financial support to cover costs such as nutritious feed, medical treatments, and skilled labor.</p>
-        <p>We turn to you, the compassionate members of our Islamic community, for your generous support. Your contributions will directly contribute to the success of the Livestock Project, enabling us to create a sustainable source of income that will uplift our initiatives and serve as a model for self-reliance within our community.</p>
-        <p>Your support means more than just financial assistance—it represents an investment in the principles of self-sufficiency and community empowerment taught by our beloved Prophet Muhammad (ﷺ).</p>
-        <p>By donating to the Livestock Project, you are not only helping us purchase feed, provide medical care, and cover labor costs, but you are also becoming a part of a legacy that promotes financial independence and sustainability in alignment with the teachings of Islam.</p>
+        <p><strong><u>LIVESTOCK PROJECT</u></strong><br> With the intention of sustainable support and self-sufficiency, we present to you our Livestock Project—an initiative aimed at generating income to sustain our noble project activities. In the spirit of Islamic principles, we strive to empower ourselves and our community through the means that Allah has provided.</p><br>
+        <p>The Livestock Project is a testament to the principle of self-reliance endorsed by our faith. By rearing animals such as goats, sheep, and cows, we not only provide a source of sustenance for ourselves but also a means to fund our projects that serve the welfare and betterment of the community.</p><br>
+        <p>The project involves careful management, from purchasing the livestock to ensuring proper feeding, veterinary care, and housing. This endeavor requires continuous financial support to cover costs such as nutritious feed, medical treatments, and skilled labor.</p><br>
+        <p>We turn to you, the compassionate members of our Islamic community, for your generous support. Your contributions will directly contribute to the success of the Livestock Project, enabling us to create a sustainable source of income that will uplift our initiatives and serve as a model for self-reliance within our community.</p><br>
+        <p>Your support means more than just financial assistance—it represents an investment in the principles of self-sufficiency and community empowerment taught by our beloved Prophet Muhammad (ﷺ).</p><br>
+        <p>By donating to the Livestock Project, you are not only helping us purchase feed, provide medical care, and cover labor costs, but you are also becoming a part of a legacy that promotes financial independence and sustainability in alignment with the teachings of Islam.</p><br>
 <p class="arabic-text">
     "وَفِى ٱلۡأَنۡعَـٰمِ لَهُمۡ ءَايَـٰتٞۖ نُّخۡرِجُ لَهُم مِّنۡہَآ إِذَآ أَنۡعَمُواْ وَمِن مَّا يَلۡبَسُونَ"
-</p>
+</p><br>
 <p class="translation-text">
     <em>"And in the grazing livestock are signs for you. We give you to drink of that which is in their bellies, from between excretion and blood, pure milk; palatable to the drinkers." (Quran 16:66)</em>
-</p>
+</p><br>
 
-        <p><strong>Join hands with us in this endeavor, and let us collectively nurture a project that embodies the principles of resourcefulness and community unity.</strong></p>
+        <p><strong>Join hands with us in this endeavor, and let us collectively nurture a project that embodies the principles of resourcefulness and community unity.</strong></p><br>
         <a href="https://api.whatsapp.com/send?phone=+256783919781&text=Hi%20KWEF%20Admin,%20I%20would%20like%20to%20support%20you!%20Insha%20Allah." class="btn btn-success btn-lg mt-3">
             SUPPORT NOW <i class="fas fa-hand-holding-usd"></i> 
         </a>
